infra/k8s/apps/fastapi/fastapi-destination-rule.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: fastapi-dr
  namespace: multi-agents
spec:
  host: fastapi-svc
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
